# shannon-prover

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  TESTING.md  pyproject.toml
bundle_browser/: README.md  build_manifest.py  index.html
core/: context_intents.py  env_loader.py
docs/: ARCHITECTURE.md  index.md
eval/: CLAUDE.md  README.md
eval_suite/: README.md  __init__.py  metrics.py  run.py
knowledge/: README.md
playground/: README.md  __init__.py  node_boot.py  run.sh  server.py  targets.py
scripts/: README.md  run_queue.sh
tests/: _pathsetup.py  conftest.py  test_abstract_adv_call_phase.py  test_admit_skeleton.py  test_agent_thinking_trace.py  test_agent_view_timeline_report.py  test_align_epistemic_status.py  test_analysis_contracts.py  test_asym_seq_hint_phase.py  test_audit.py  test_auto_diff_recommendations.py  test_backend_stdout_authoritative_parse.py  test_bad_trace.py  test_bridge_lemmas_param_parse.py  test_call_frontier_structure.py  test_call_site_analyzer.py  test_call_site_surface_consistency.py  test_call_subgoals.py  test_called_proc_body.py  test_chain_keep_on_fail.py  test_chain_replay_dice.py  test_claude_md_intents.py  test_commit_legacy_display.py  test_commit_verdict_authoritative.py  test_compiler_smoke_matrix.py  test_concrete_global_frame.py  test_ctx_respawn.py  test_daemon_backend_poison_recovery.py  test_daemon_backend_why3_socket.py  test_daemon_connection_lost_recovery.py  test_destructive_action_guard.py  test_deterministic_signals_dedup.py  test_diagnose_probe_aware.py  test_ec_abstract_adv_hint.py  (+171 more)
(+14135 files in other folders)
