[project]
name = "shannon-prover"
version = "0.1.0"
description = "Event-driven EasyCrypt prover-agent workflow with structured proof-state facts and tree search."
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.82.2",
    "anthropic>=0.40.0",
    "openai>=2.28.0",
    "pexpect>=4.9.0",
]

[dependency-groups]
# Installed by `uv sync` alongside the runtime deps, so a fresh clone can run
# the test suite with `uv run python -m pytest tests/ -q`.
dev = ["pytest>=9.0"]

[tool.setuptools.packages.find]
# Declare the in-tree packages so `pip install -e .` resolves package-absolute
# imports (`from core.easycrypt...`) without sys.path shims. Running from source
# still works without an install via the minimal project-root bootstrap.
include = ["core*", "workflow*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["worktrees"]
